--- a/app/views/components/_profile_card.html.erb
+++ b/app/views/components/_profile_card.html.erb
@@ -13,11 +13,11 @@
           <h4 class="font-blue">Undergraduate Developer</h4>
 
           <ul class="social-icons">
-            <li><a href=""><i class="fa fa-envelope"></i></a></li>
-            <li><a href=""><i class="fa fa-github"></i></a></li>
-            <li><a href=""><i class="fa fa-instagram"></i></a></li>
-            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
-            <li><a href=""><i class="fa fa-twitter"></i></a></li>
+            <li><a href="mailto:charlie.campbell14@gmail.com"><i class="fa fa-envelope"></i></a></li>
+            <li><a href="https://github.com/charlescampbell"><i class="fa fa-github"></i></a></li>
+            <li><a href="https://www.instagram.com/__charliecampbell/"><i class="fa fa-instagram"></i></a></li>
+            <li><a href="https://www.linkedin.com/in/charliebcampbell/"><i class="fa fa-linkedin"></i></a></li>
+            <li><a href="https://twitter.com/charliecompbell"><i class="fa fa-twitter"></i></a></li>
             <li><a href=""><i class="fa fa-download"></i></a></li>
           </ul>
         </div>
