--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -1,6 +1,7 @@
-@import 'bootstrap';
-@import 'ionicons';
-@import 'font-awesome';
-@import url('https://fonts.googleapis.com/css?family=Poppins&display=swap');
+@import "bootstrap";
+@import "ionicons";
+@import "font-awesome";
+@import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 $campbell-blue: #01afff;
+$campbell-silver: #c0c0c0;
