--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,5 +12,6 @@
   <body>
     <%= render 'components/profile_card' %>
     <%= yield %>
+    <%= render 'components/footer' %>
   </body>
 </html>
