--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -1,9 +1,9 @@
 <footer>
 	<div class="footer-links">
-		<%= link_to 'PROJECT', project_path %>
+		<%= link_to 'PROJECT', project_path, class: active_link?('projects') %>
 		<small>/</small>
 
-		<%= link_to 'HOME', root_path %>
+		<%= link_to 'HOME', root_path, class: active_home? %>
 		<small>/</small>
 
 		<a href="">EDUCATION</a>
