--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -1,13 +1,14 @@
 @import "variables";
 
 footer {
-  position: absolute;
-  bottom: 0;
+  position: fixed;
   width: 100%;
+  bottom: 0;
+  background-color: white;
+  padding: 1rem;
 }
 
 .footer-links {
   text-align: center;
-  margin-bottom: 1rem;
   color: $campbell-silver;
 }
