feat(education): List educations

--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -4,4 +4,5 @@
 @import url("https://fonts.googleapis.com/css?family=Poppins&display=swap");
 
 $campbell-blue: #01afff;
+$campbell-lightblue: #8fd8ff;
 $campbell-silver: #c0c0c0;
