--- a/app/views/components/_footer.html.erb
+++ b/app/views/components/_footer.html.erb
@@ -6,6 +6,6 @@
 		<%= link_to 'HOME', root_path, class: active_home? %>
 		<small>/</small>
 
-		<a href="">EDUCATION</a>
+		<%= link_to 'EDUCATION', education_path, class: active_link?('education') %>
 	</div>
 </footer>
