--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -197,6 +197,10 @@ b.max-bold {
   background: $campbell-blue;
 }
 
+.focused-link {
+  color: $campbell-lightblue;
+}
+
 .margin-t-10 {
   margin-top: 10px;
 }
@@ -209,6 +213,11 @@ b.max-bold {
   margin-bottom: 50px;
 }
 
+.margin-tb-10 {
+  margin-top: 10px;
+  margin-bottom: 10px;
+}
+
 .margin-tb-30 {
   margin-top: 30px;
   margin-bottom: 30px;
@@ -216,6 +225,11 @@ b.max-bold {
 
 .font-blue {
   color: $campbell-blue;
+  font-weight: bold;
+}
+
+.font-lightblue {
+  color: $campbell-lightblue;
   font-weight: bold;
 }
 
