--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -49,7 +49,7 @@
   text-align: center;
   font-size: 2rem;
   padding: 0.5rem;
-  color: #8fd8ff;
+  color: $campbell-lightblue;
   display: block;
 }
 
