refactor(mobile): Review and refactor scss

--- a/app/assets/stylesheets/mobile.scss
+++ b/app/assets/stylesheets/mobile.scss
@@ -1,26 +1,5 @@
 /* Screens Resolution : 992px
 -------------------------------------------------------------------------- */
-@media only screen and (max-width: 1200px) {
-  /* ---------------------------------
-	9. COUNTER SECTION
-	--------------------------------- */
-
-  .counter-section {
-    text-align: center;
-    padding: 50px 0 20px;
-  }
-
-  .counter {
-    display: inline-block;
-  }
-
-  .counter .desc {
-    text-align: left;
-  }
-}
-
-/* Screens Resolution : 992px
--------------------------------------------------------------------------- */
 @media only screen and (max-width: 992px) {
   /* ---------------------------------
 	4. INTRO SECTION
@@ -78,25 +57,25 @@
 	5. PORFOLIO SECTION
 	--------------------------------- */
 
-  .portfolio-section {
+  .project-section {
     padding-bottom: 0;
   }
 
-  .portfolio-section .portfolioFilter {
+  .project-section .projectFilter {
     margin: 0px 0 10px;
   }
 
-  .portfolio-section .portfolioContainer {
+  .project-section .projectContainer {
     margin-left: 0;
     margin-right: 0;
   }
 
-  .portfolio-section .p-item {
+  .project-section .p-item {
     width: 50%;
     padding: 0 15px 0px;
   }
 
-  .portfolio-section .p-item {
+  .project-section .p-item {
     max-width: 400px;
   }
 
@@ -113,83 +92,16 @@
 /* Screens Resolution : 575px
 -------------------------------------------------------------------------- */
 @media only screen and (max-width: 575px) {
-  /* ---------------------------------
-	1. PRIMARY STYLES
-	--------------------------------- */
-
   body {
     font-size: 14px;
   }
 
-  /* ---------------------------------
-	5. PORFOLIO SECTION
-	--------------------------------- */
-
-  .portfolio-section .p-item {
+  .project-section .p-item {
     width: 100%;
   }
 }
 
-/* Screens Resolution : 479px
--------------------------------------------------------------------------- */
-@media only screen and (max-width: 479px) {
-}
-
-/* Screens Resolution : 359px
--------------------------------------------------------------------------- */
-@media only screen and (max-width: 359px) {
-  /* ---------------------------------
-	3. HEADER
-	--------------------------------- */
-
-  header .heading-wrapper {
-    padding: 30px 20px 20px;
-  }
-
-  header .info .icon {
-    font-size: 25px;
-  }
-
-  header .info .right-area {
-    margin-left: 35px;
-  }
-}
-
-/* Screens Resolution : 290px
--------------------------------------------------------------------------- */
-@media only screen and (max-width: 290px) {
-}
-
-/* Screens Resolution : 290px
--------------------------------------------------------------------------- */
 @media only screen and (max-width: 260px) {
-  /* ---------------------------------
-	3. HEADER
-	--------------------------------- */
-
-  header .heading-wrapper {
-    padding: 10px 15px 0px;
-  }
-
-  header .info .icon {
-    font-size: 15px;
-  }
-
-  header .info .right-area {
-    margin-left: 20px;
-  }
-
-  /* ---------------------------------
-	4. INTRO SECTION
-	--------------------------------- */
-
-  .intro .profile-img {
-    width: 80%;
-    height: auto;
-    top: 0;
-    margin-bottom: 10px;
-  }
-
   .intro {
     padding: 20px 10px 0;
     margin-right: -15px;
