refactor(file structure): Move all frontend components into a frontend direcotry

--- a/app/views/frontend/projects/index.html.erb
+++ b/app/views/frontend/projects/index.html.erb
@@ -6,6 +6,8 @@
         <a href="http://lynnecampbell.co.uk" class="project-link">lynnecampbell.co.uk</a>
         <a href="" class="project-link">quaybooks.nq</a>
         <a href="" class="project-link">skmichellelectrical.co.uk</a>
+        <a href="" class="project-link">kits.co.uk</a>
+        <a href="" class="project-link">justgnosh.co.uk</a>
       </div>
     </div>
   </div>
