--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,8 +10,8 @@
   </head>
 
   <body>
-    <%= render 'components/profile_card' %>
+    <%= render 'frontend/components/intro' %>
     <%= yield %>
-    <%= render 'components/footer' %>
+    <%= render 'frontend/components/footer' %>
   </body>
 </html>
