--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -5,4 +5,8 @@
 
 $campbell-blue: #01afff;
 $campbell-lightblue: #8fd8ff;
+
+$campbell-red: #ff0101;
+$campbell-lightred: #fa9e9e;
+
 $campbell-silver: #c0c0c0;
