--- a/app/views/backend/components/_footer.html.erb
+++ b/app/views/backend/components/_footer.html.erb
@@ -7,5 +7,6 @@
 		<small>/</small>
 
 		<%= link_to 'EDUCATION', education_path, class: active_link?('education') %>
+		<p id="notice"><%= notice %></p>
 	</div>
 </footer>
