--- a/app/views/layouts/backend.html.erb
+++ b/app/views/layouts/backend.html.erb
@@ -11,6 +11,12 @@
 
   <body>
     <%= render 'backend/components/intro' %>
+    <div id="modal-window" class="modal fade" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog modal-dialog-centered" role="document">
+        <div class="modal-content"></div>
+      </div>
+    </div>
+
     <%= yield %>
     <%= render 'backend/components/footer' %>
   </body>
