--- a/app/views/backend/highlights/_edit.html.erb
+++ b/app/views/backend/highlights/_edit.html.erb
@@ -8,18 +8,18 @@
 
   <div class="modal-body">
     <div class="form-group">
-      <label>Job Title / Qualificiation:</label>
+      <label>Job Title / Qualificiation:</label><span class="font-red">*</span>
       <%= form.text_field :title, class: 'form-control', placeholder: 'Developer or BSc Software Engineering', required: true %>
     </div>
 
     <div class="form-group">
-      <label>Organisation:</label>
+      <label>Organisation:</label><span class="font-red">*</span>
       <%= form.text_field :organisation, class: 'form-control', placeholder: 'UKCloud or Bournemouth University', required: true %>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
-        <label>Start Date</label>
+        <label>Start Date</label><span class="font-red">*</span>
         <%= form.text_field :start_date, type: 'date', class: 'form-control', required: true%>
       </div>
 
@@ -30,7 +30,7 @@
     </div>
 
     <div class="form-group">
-      <label>Description:</label>
+      <label>Description:</label><span class="font-red">*</span>
       <%= form.text_area :description, class: 'form-control', placeholder: 'Type here...', rows: 4, required: true %>
     </div>
 
