--- a/app/views/backend/socials/_new.html.erb
+++ b/app/views/backend/socials/_new.html.erb
@@ -1,6 +1,6 @@
 <%= form_with(model: @social, url: create_social_path) do |form| %>
   <div class="modal-header">
-    <h5 class="modal-title">Editing <%= @social.friendly_name %></h5>
+    <h5 class="modal-title">New Social Link</h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
@@ -8,18 +8,18 @@
 
   <div class="modal-body">
     <div class="form-group">
-      <label>Friendly Name:</label>
-      <%= form.text_field :friendly_name, class: 'form-control', placeholder: 'email' %>
+      <label>Friendly Name:</label><span class="font-red">*</span>
+      <%= form.text_field :friendly_name, class: 'form-control', placeholder: 'email', required: true %>
     </div>
 
     <div class="form-group">
-      <label>URL:</label>
-      <%= form.text_field :url, class: 'form-control', placeholder: 'https://url.co.uk' %>
+      <label>URL:</label><span class="font-red">*</span>
+      <%= form.text_field :url, class: 'form-control', placeholder: 'https://url.co.uk', required: true %>
     </div>
 
     <div class="form-group">
-      <label>Icon</label>
-      <%= form.text_field :icon, class: 'form-control', placeholder: 'fa fa-book' %>
+      <label>Icon</label><span class="font-red">*</span>
+      <%= form.text_field :icon, class: 'form-control', placeholder: 'fa fa-book', required: true %>
     </div>
   </div>
 
