--- a/app/assets/stylesheets/project.scss
+++ b/app/assets/stylesheets/project.scss
@@ -62,3 +62,12 @@
   margin-left: auto;
   margin-right: auto;
 }
+
+.project-title {
+  text-align: center;
+  font-size: 2rem;
+  padding: 0.5rem;
+  color: $campbell-blue;
+  font-weight: bold;
+  display: block;
+}
