--- a/app/views/backend/projects/index.html.erb
+++ b/app/views/backend/projects/index.html.erb
@@ -2,11 +2,14 @@
   <div class="container">
     <div class="row">
       <div class="project-links">
-        <a href="http://lynnecampbell.co.uk" class="project-link">lynnecampbell.co.uk</a>
-        <a href="" class="project-link">quaybooks.nq</a>
-        <a href="" class="project-link">skmichellelectrical.co.uk</a>
-        <a href="" class="project-link">kits.co.uk</a>
-        <a href="" class="project-link">justgnosh.co.uk</a>
+        <%= link_to 'new', new_project_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'project-link'}%>
+        <hr>
+
+        <% @projects.each do |project| %>
+          <%= link_to project.friendly_name, project.url, class: 'project-link' %>
+          <%= link_to 'edit', edit_project_path(project), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link' }%>
+          <%= link_to 'remove', delete_project_path(project), method: :delete, class: 'focused-link-danger', data: { confirm: 'Are you sure? This action can not be undone.' }%>
+        <% end %>
       </div>
     </div>
   </div>
