--- a/app/assets/stylesheets/variables.scss
+++ b/app/assets/stylesheets/variables.scss
@@ -6,6 +6,12 @@
 $campbell-blue: #01afff;
 $campbell-lightblue: #8fd8ff;
 
+$campbell-green: #00dd12;
+$campbell-lightgreen: #71e07b;
+
+$campbell-orange: #dd6300;
+$campbell-lightorange: #df975d;
+
 $campbell-red: #ff0101;
 $campbell-lightred: #fa9e9e;
 
