feat(education): CRUD for top level education

--- a/app/views/backend/components/_footer.html.erb
+++ b/app/views/backend/components/_footer.html.erb
@@ -6,7 +6,7 @@
 		<%= link_to 'HOME', backend_path, class: active_link?('home') %>
 		<small>/</small>
 
-		<%= link_to 'EDUCATION', education_path, class: active_link?('education') %>
+		<%= link_to 'EDUCATION', backend_education_path, class: active_link?('education') %>
 		<small>/</small>
 
 		<%= link_to 'PRODUCTION', root_path %>
