--- a/app/views/frontend/education/index.html.erb
+++ b/app/views/frontend/education/index.html.erb
@@ -1,86 +1,32 @@
 <section class="experience-section section">
   <div class="container">
     <div class="row">
-      <div class="col-sm-4">
-        <div class="heading">
-          <h3>BSc Software Engineering</h3>
-          <h6 class="font-lite-black">Bournemouth University</h6>
-        </div>
-      </div>
-
-      <div class="col-sm-8">
-        <div class="experience-wrapper">
-          <div class="experience margin-b-50">
-            <h4>
-              Second Year - Software Engineering
-              <small class="font-blue">FIRST</small>
-            </h4>
-
-            <div>
-              <h5 class="font-yellow">
-                Project Management & Teamworking
-                <small class="font-lightblue">FIRST</small>
-              </h5>
-
-              <p class="margin-tb-10">
-                Focusing on all of the units we have studied the past few years
-                this unit introduced a taste of a final year project. My team
-                designed an app called JustGnosh a spin on ordering food to a
-                resturant table.
-              </p>
-            </div>
-
-            <hr>
-
-            <div>
-              <h5 class="font-yellow">
-                Web Application Programming
-                <small class="font-lightblue">FIRST</small>
-              </h5>
-
-              <p class="margin-tb-10">
-                Using codeigniters framework we had to create a web application
-                that could be considered a replacement for the current virtual
-                learning enviroment, this all written in PHP using a mysqlite
-                database.
-              </p>
-            </div>
-          </div>
-
-          <div class="experience margin-b-50">
-            <h4>First Year - General Computing</h4>
-
-            <div>
-              <h5 class="font-yellow">
-                Systems Analysis & Design
-                <small class="font-lightblue">FIRST</small>
-              </h5>
-
-              <p class="margin-tb-10">
-                Working closely with other students on the course in analysing
-                the KITS system and creating a timetabling system for them. My
-                team came first place and won the Kingfisher IT award.
-              </p>
-            </div>
-
-            <hr>
-
-            <div>
-              <h5 class="font-yellow">
-                Business & Professional Issues
-                <small class="font-lightblue">FIRST</small>
-              </h5>
-
-              <p class="margin-tb-10">
-                Myself and a team of students had to pick an innovative smart
-                product and create a marketing plan and convince lecturers to
-                invest in our product. We chose to work on a smart locking
-                system. We came in the top 5 for our presentation.
-              </p>
-            </div>
+      <% @qualifications.each do |qualification| %>
+        <div class="col-sm-4">
+          <div class="heading qualification-heading">
+            <h3><%= qualification.title %></h3>
+            <h6 class="font-lite-black"><%= qualification.organisation %></h6>
           </div>
         </div>
-      </div>
+
+        <div class="col-sm-8">
+          <div class="experience-wrapper">
+            <% qualification.academic_year.order('created_at DESC').each do |academic_year| %>
+              <div class="experience margin-b-50">
+                <h4><%= academic_year.title %> <small class="font-blue"><%= academic_year.grade %></small></h4>
+
+                <% unless academic_year.education.nil? %>
+                  <% academic_year.education.each do |education| %>
+                    <h5><%= education.unit %><small class="font-lightblue"> <%= education.grade %></small></h5>
+                    <p class="margin-tb-10"><%= education.description %></p>
+                    <hr>
+                  <% end %>
+                <% end %>
+              </div>
+            <% end %>
+          </div>
+        </div>
+      <% end %>
     </div>
   </div>
 </section>
