feat(gallery): Allow a gallery for uploading outdated websites

--- a/app/views/backend/components/_footer.html.erb
+++ b/app/views/backend/components/_footer.html.erb
@@ -1,5 +1,8 @@
 <footer>
 	<div class="footer-links">
+		<%= link_to 'GALLARY', backend_gallary_path, class: active_link?('gallary') %>
+		<small>/</small>
+
 		<%= link_to 'PROJECT', backend_projects_path, class: active_link?('projects') %>
 		<small>/</small>
 
