--- a/app/views/frontend/gallary/history.html.erb
+++ b/app/views/frontend/gallary/history.html.erb
@@ -2,7 +2,7 @@
   <div class="container">
     <div class="row">
       <div class="project-links">
-        <h4 class="project-title">A complete history of campbell.me</h4>
+        <h4 class="project-title">A complete history of charlescampbell.me</h4>
         <% @images.each do |image| %>
           <h3><%= image.name %></h3>
           <%= image_tag(image.image.url) %>
