--- a/app/views/backend/components/_intro.html.erb
+++ b/app/views/backend/components/_intro.html.erb
@@ -10,7 +10,7 @@
           </div>
 
           <h2>Charlie Campbell</h2>
-          <h4 class="font-red">Dev Edition</h4>
+          <h4 class="font-red">Dev Edition (<%= version %>)</h4>
 
           <ul class="social-icons">
             <% socials.each do |social| %>
