feat(profile): Add ability to change name and position

--- a/app/views/backend/components/_intro.html.erb
+++ b/app/views/backend/components/_intro.html.erb
@@ -5,12 +5,19 @@
 
       <div class="col-md-10 col-lg-8">
         <div class="intro">
-          <div class="profile-img">
+          <div class="profile-img"></div>
 
-          </div>
-
-          <h2>Charlie Campbell</h2>
           <h4 class="font-red">Dev Edition (<%= version %>)</h4>
+
+          <% if profile('name') && profile('position') %>
+            <h2><%= profile('name').value %></h2>
+            <h4 class="font-blue"><%= profile('position').value %></h4>
+
+            <%= link_to 'edit name', edit_profile_path(profile('name')), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link'} %>
+            <%= link_to 'edit position', edit_profile_path(profile('position')), {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link'} %>
+          <% else %>
+            <%= link_to 'add profile', new_profile_path, {:remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link'} %>
+          <% end %>
 
           <ul class="social-icons">
             <% socials.each do |social| %>
