--- a/app/views/frontend/components/_intro.html.erb
+++ b/app/views/frontend/components/_intro.html.erb
@@ -5,12 +5,12 @@
 
       <div class="col-md-10 col-lg-8">
         <div class="intro">
-          <div class="profile-img">
+          <div class="profile-img"></div>
 
-          </div>
-
-          <h2>Charlie Campbell</h2>
-          <h4 class="font-blue">Undergraduate Developer</h4>
+          <% if profile('name') && profile('position') %>
+            <h2><%= profile('name').value %></h2>
+            <h4 class="font-blue"><%= profile('position').value %></h4>
+          <% end %>
 
           <ul class="social-icons">
             <% socials.each do |social| %>
