--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -12,3 +12,9 @@ footer {
   text-align: center;
   color: $campbell-silver;
 }
+
+@media (min-width: 320px) and (max-width: 1025px) {
+  .footer-links {
+    font-size: 2.5rem;
+  }
+}
