--- a/app/assets/stylesheets/intro.scss
+++ b/app/assets/stylesheets/intro.scss
@@ -73,8 +73,16 @@
   transform: scale(1);
 }
 
-@media only screen and (max-width: 992px) {
-  .intro-section {
-    padding-top: 50px;
+@media (min-width: 320px) and (max-width: 1025px) {
+  .name {
+    font-size: 3.5rem;
+  }
+
+  .position{
+    font-size: 2rem;
+  }
+
+  .intro .social-icons > li > a {
+    font-size: 3.5rem;
   }
 }
