--- a/app/views/frontend/components/_intro.html.erb
+++ b/app/views/frontend/components/_intro.html.erb
@@ -8,8 +8,8 @@
           <div class="profile-img"></div>
 
           <% if profile('name') && profile('position') %>
-            <h2><%= profile('name').value %></h2>
-            <h4 class="font-blue"><%= profile('position').value %></h4>
+            <h2 class="name"><%= profile('name').value %></h2>
+            <h4 class="font-blue position"><%= profile('position').value %></h4>
           <% end %>
 
           <ul class="social-icons">
