--- a/app/views/backend/socials/_edit.html.erb
+++ b/app/views/backend/socials/_edit.html.erb
@@ -21,6 +21,16 @@
       <label>Icon</label><span class="font-red">*</span>
       <%= form.text_field :icon, class: 'form-control', placeholder: 'fa fa-book', required: true %>
     </div>
+
+    <div class="form-group">
+      <label>Display on mobile? (optional)</label><span class="font-red">*</span>
+      <%= form.text_field :display, class: 'form-control', placeholder: 'y / n' %>
+    </div>
+
+    <div class="form-group">
+      <label>Position</label><span class="font-red">*</span>
+      <%= form.number_field :position, class: 'form-control', placeholder: '1..10', required: true %>
+    </div>
   </div>
 
   <div class="modal-footer">
