--- a/app/assets/stylesheets/footer.scss
+++ b/app/assets/stylesheets/footer.scss
@@ -16,5 +16,6 @@ footer {
 @media (min-width: 320px) and (max-width: 1025px) {
   .footer-links {
     font-size: 2.5rem;
+    padding: 3rem;
   }
 }
