chore(footer): Rename project to projects

--- a/app/views/backend/components/_footer.html.erb
+++ b/app/views/backend/components/_footer.html.erb
@@ -3,7 +3,7 @@
 		<%= link_to 'GALLARY', backend_gallary_path, class: active_link?('gallary') %>
 		<small>/</small>
 
-		<%= link_to 'PROJECT', backend_projects_path, class: active_link?('projects') %>
+		<%= link_to 'PROJECTS', backend_projects_path, class: active_link?('projects') %>
 		<small>/</small>
 
 		<%= link_to 'HOME', backend_path, class: active_link?('home') %>
