--- a/app/views/frontend/components/_footer.html.erb
+++ b/app/views/frontend/components/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer>
 	<div class="footer-links">
-		<%= link_to 'PROJECT', project_path, class: active_link?('projects') %>
+		<%= link_to 'PROJECTS', project_path, class: active_link?('projects') %>
 		<small>/</small>
 
 		<%= link_to 'HOME', root_path, class: active_home? %>
