--- a/app/views/backend/education/index.html.erb
+++ b/app/views/backend/education/index.html.erb
@@ -36,8 +36,8 @@
 
                         <% education.tag.each do |tag| %>
                           <%= tag_for(tag) %>
-                          <%= link_to 'edit', edit_tag_path(education), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link' } %> or
-                          <%= link_to 'remove', delete_tag_path(education), method: :delete, class: 'focused-link-danger', data: { confirm: 'Are you sure? This action can not be undone.' } %>
+                          <%= link_to 'edit', edit_tag_path(tag), { :remote => true, 'data-toggle' =>  "modal", 'data-target' => '#modal-window', class: 'focused-link' } %> or
+                          <%= link_to 'remove', delete_tag_path(tag), method: :delete, class: 'focused-link-danger', data: { confirm: 'Are you sure? This action can not be undone.' } %>
                         <% end %>
                       </small>
                     </h5>
