--- a/app/views/backend/tag/_new.html.erb
+++ b/app/views/backend/tag/_new.html.erb
@@ -1,16 +1,13 @@
 <%= form_with(model: @tag, url: create_tag_path) do |form| %>
   <div class="modal-header">
-    <h5 class="modal-title">Add new tag</h5>
+    <h5 class="modal-title">Add new tag for <%= unit_title_for(params[:education_id]) %></h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
       <span aria-hidden="true">&times;</span>
     </button>
   </div>
 
   <div class="modal-body">
-    <div class="form-group">
-      <label>Education:</label><span class="font-red">*</span>
-      <%= form.collection_select :education_id, Education.all,:id, :unit, {}, class: 'form-control' %>
-    </div>
+    <%= form.hidden_field :education_id, value: params[:education_id], required: true %>
 
     <div class="form-group">
       <label>Tag:</label><span class="font-red">*</span>
