--- a/app/views/backend/education/_unit.html.erb
+++ b/app/views/backend/education/_unit.html.erb
@@ -5,7 +5,7 @@
     <%= add_tag_link(education) %>
 
     <% education.tag.each do |tag| %>
-      <%= tag_for(tag) %>
+      <%= tag_link_for(tag) %>
     <% end %>
   </small>
 </h5>
