feat(tools): Create a page for adding tooling

--- a/app/views/backend/components/_footer.html.erb
+++ b/app/views/backend/components/_footer.html.erb
@@ -12,6 +12,9 @@
 		<%= link_to 'EDUCATION', backend_education_path, class: active_link?('education') %>
 		<small>/</small>
 
+		<%= link_to 'TOOLS', backend_tools_path, class: active_link?('tools') %>
+		<small>/</small>
+
 		<%= link_to 'PRODUCTION', root_path %>
 		<p id="notice"><%= notice %></p>
 	</div>
