--- a/app/views/frontend/components/_footer.html.erb
+++ b/app/views/frontend/components/_footer.html.erb
@@ -7,5 +7,8 @@
 		<small>/</small>
 
 		<%= link_to 'EDUCATION', education_path, class: active_link?('education') %>
+		<small>/</small>
+
+		<%= link_to 'TOOLS', tools_path, class: active_link?('tools') %>
 	</div>
 </footer>
