refactor(helpers): Split out the helpers a bit

--- a/app/views/backend/tools/_languages.html.erb
+++ b/app/views/backend/tools/_languages.html.erb
@@ -3,6 +3,6 @@
 
 <span class="tools">
   <% languages.each do |language|%>
-    <%= tool_link_tag(language) %>
+    <%= linked_badge_for(language) %>
   <% end %>
 </span>
