--- a/app/views/backend/tools/_tools.html.erb
+++ b/app/views/backend/tools/_tools.html.erb
@@ -3,6 +3,6 @@
 
 <span class="tools">
   <% applications.each do |app| %>
-    <%= tool_icon(app) %>
+    <%= linked_icon_for(app) %>
   <% end %>
 </span>
