--- a/app/views/frontend/tools/_languages.html.erb
+++ b/app/views/frontend/tools/_languages.html.erb
@@ -3,6 +3,6 @@
 
 <span class="tools">
   <% languages.each do |language|%>
-    <%= tool_tag(language) %>
+    <%= badge_for(language) %>
   <% end %>
 </span>
