--- a/app/views/backend/tag/_new.html.erb
+++ b/app/views/backend/tag/_new.html.erb
@@ -15,8 +15,15 @@
     </div>
 
     <div class="form-group">
-      <label>Colour:</label>(red, green, yellow, blue, white, black)<span class="font-red">*</span>
-      <%= form.text_field :colour, class: 'form-control', placeholder: 'i.e. red, yellow', required: true %>
+      <label>Colour:</label>
+
+      <%= form.select :colour, options_for_select(
+          [
+            ['Red', 'danger'], ['Green', 'success'], ['Yellow', 'warning'],
+            ['Blue', 'info'], ['White', 'light'], ['Black', 'dark']
+          ]
+        ), {}, class: 'form-control'
+      %>
     </div>
   </div>
 
