feat(style): System based darkmode

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -19,6 +19,8 @@
 @import "project";
 @import "footer";
 
+@import "darkmode";
+
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 // Variables
 // - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
